# USBHidToolkit

./: .gitignore  README.md  pyproject.toml
EdgeDevices/LautOSEsp32C3_OLED/: main.py  main_ble.py  ssd1306.py
demos/: complex_interaction_demo.py  keyboard_demo.py  mouse_demo.py  multi_device_demo.py  packet_builder_demo.py
demos/GUIAgent/: PLAN.md
demos/GUIAgent/ShowUIServices/: .gitignore  README.md  ShowUIREADME.md  app.py  requirements.txt  run.py  test_client.py
demos/GUIAgent/backend/: .env.example  CONFIG_GUIDE.md  requirements.txt  run.py
demos/GUIAgent/backend/app/: agent.backup.py  agent.py  camera.py  hid.py  main.py
demos/GUIAgent/frontend/: package-lock.json  package.json
demos/GUIAgent/frontend/src/: App.tsx  index.css
demos/GUIAgent/frontend/src/components/: ChatPanel.tsx  ConnectionPanel.tsx  VideoFeed.tsx
demos/GUIAgent/scripts/: requirements.txt  screen_streamer.py
docs/: usage_examples.md
src/usb_hid_toolkit/: __init__.py  constants.py  keyboard.py  mouse.py  packets.py  protocol.py
src/usb_hid_toolkit/transmitters/: __init__.py  base.py  tcp.py
