[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "USBHidToolkit"
version = "0.1.0"
authors = [
  { name="Liyulingyue", email="your.email@example.com" },
]
description = "A toolkit for converting key/mouse actions to USB HID commands and sending them to remote hardware."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/Liyulingyue/USBHidToolkit"

[tool.setuptools.packages.find]
where = ["src"]
